Create common sub-project and extract remaining database and comon classes